[project]
name = "strata-test"
version = "0.1.0"
description = ""
authors = []
requires-python = "~=3.10.0"
dependencies = [
  "flexitest",
  "strata_utils",
  "bitcoinlib>=0.7.5,<0.8",
  "websockets~=15.0",
  "web3>=7.13.0,<8",
  "py-solc-x>=2.0.4,<3",
  "locust>=2.39.1,<3",
  "toml>=0.10.2,<0.11",
  "base58~=2.1.1",
]

[dependency-groups]
dev = ["ruff==0.12.11", "maturin==1.9.4", "ty>=0.0.1a20,<0.0.2"]

[tool.uv]

[tool.uv.sources]
flexitest = { git = "https://codeberg.org/treyd/flexitest.git" }
strata_utils = { path = "../crates/util/python-utils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests", "utils", "envs", "factory", "load", "mixins"]

[tool.ruff]
line-length = 100
indent-width = 4
# Disabled for the entire file because of monkey-patching.
# Ignoring lint for the block of code is not currently supported:
# https://github.com/astral-sh/ruff/issues/3711
exclude = ["entry.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = [
  # related to star imports
  "F405",
  "F403",
  # if block stuff
  "SIM102",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100
