[package]
edition = "2021"
name = "integration-tests"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bitcoin.workspace = true
bitcoind-async-client.workspace = true
borsh.workspace = true
corepc-node.workspace = true
rand.workspace = true
rand_chacha.workspace = true
strata-asm-common = { path = "../crates/asm/common" }
strata-asm-manifest-types = { path = "../crates/asm/manifest-types" }
strata-asm-proto-administration = { path = "../crates/asm/subprotocols/admin" }
strata-asm-txs-admin = { path = "../crates/asm/txs/admin", features = [
  "test-utils",
] }
strata-asm-worker = { path = "../crates/asm/worker" }
strata-bridge-types.workspace = true
strata-btc-types.workspace = true
strata-crypto.workspace = true
strata-merkle.workspace = true
strata-params.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
strata-tasks.workspace = true
strata-test-utils-btcio.workspace = true
strata-test-utils-l2.workspace = true
tokio.workspace = true

[dev-dependencies]

[lib]
name = "integration_tests"
path = "lib.rs"

[[test]]
name = "stub"
path = "stub.rs"

[[test]]
name = "asm_core"
path = "asm/core.rs"

[[test]]
name = "asm_admin"
path = "asm/admin.rs"

[[test]]
name = "asm_bridge"
path = "asm/bridge.rs"
