[package]
name = "alpen-serialization-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "identifiers"
harness = false

[[bench]]
name = "checkpoint_types"
harness = false

[lints]
workspace = true

[dependencies]
criterion = { workspace = true }

strata-checkpoint-types = { workspace = true }
strata-checkpoint-types-ssz = { workspace = true }
strata-identifiers = { workspace = true }
strata-identifiers-ssz = { workspace = true }

borsh = { workspace = true }
ssz = { workspace = true }
ssz_types = { workspace = true }
tree_hash = { workspace = true }
