[package]
name = "strata-acct-ssz-types"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-btc-types.workspace = true

int-enum.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
ssz_types.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[build-dependencies]
# TODO: Add ssz-gen codegen tool when available
