[package]
name = "strata-acct-types"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-btc-types.workspace = true
strata-codec.workspace = true
strata-mmr.workspace = true

digest.workspace = true
int-enum.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
