[package]
name = "strata-acct-types"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-btc-types.workspace = true
strata-codec.workspace = true
strata-identifiers.workspace = true
strata-merkle.workspace = true

digest.workspace = true
sha2.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[dev-dependencies]
proptest.workspace = true
strata-test-utils-ssz.workspace = true

[build-dependencies]
ssz_codegen.workspace = true

[lints]
workspace = true
