[package]
edition = "2021"
name = "strata-asm-types"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-primitives.workspace = true

arbitrary.workspace = true
bitcoin.workspace = true
borsh.workspace = true
digest.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
strata-test-utils-btc.workspace = true
rand.workspace = true
