[package]
name = "strata-bridge-params"
version = "0.4.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
serde.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
arbitrary = ["dep:arbitrary"]
