[package]
edition = "2021"
name = "strata-bridge-types"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-primitives.workspace = true

arbitrary.workspace = true
bitcoin.workspace = true
borsh.workspace = true
musig2.workspace = true
serde.workspace = true

[dev-dependencies]

[features]
default = ["std"]
std = []
test_utils = []
