[package]
edition = "2021"
name = "strata-bridge-types"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
ssz.workspace = true
ssz_derive.workspace = true
strata-identifiers.workspace = true
strata-primitives.workspace = true

arbitrary.workspace = true
borsh.workspace = true
serde.workspace = true

[dev-dependencies]

[features]
default = ["std"]
std = []
test_utils = []
