[package]
name = "strata-btc-types"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-checkpoint-types.workspace = true
strata-identifiers = { workspace = true, features = ["bitcoin"] }
strata-l1-txfmt.workspace = true

arbitrary.workspace = true
bitcoin = { workspace = true, features = ["serde", "rand-std"], optional = true }
bitcoin-bosd = { workspace = true, features = ["address"] }
borsh.workspace = true
digest.workspace = true
hex.workspace = true
num_enum.workspace = true
rand.workspace = true
serde.workspace = true
secp256k1 = { workspace = true, features = ["global-context"] }
sha2.workspace = true
thiserror.workspace = true

[features]
default = ["bitcoin"]
bitcoin = ["dep:bitcoin"]

[dev-dependencies]
strata-test-utils.workspace = true
strata-test-utils-btc.workspace = true

borsh.workspace = true
serde_json.workspace = true
