[package]
name = "strata-chain-worker-new"
version = "0.1.0"
edition = "2024"
description = "New chain worker implementation using OL STF and new OL types"

[lints]
workspace = true

[dependencies]
strata-acct-types.workspace = true
strata-checkpoint-types.workspace = true
strata-db-types.workspace = true
strata-identifiers.workspace = true
strata-node-context.workspace = true
strata-ol-chain-types-new.workspace = true
strata-ol-state-support-types.workspace = true
strata-ol-state-types.workspace = true
strata-ol-stf.workspace = true
strata-params.workspace = true
strata-primitives.workspace = true
strata-service.workspace = true
strata-status.workspace = true
strata-storage.workspace = true

anyhow.workspace = true
serde.workspace = true
ssz.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-db-store-sled.workspace = true
strata-ol-state-types = { workspace = true, features = ["test-utils"] }
sled.workspace = true
threadpool.workspace = true
typed-sled.workspace = true
