[package]
name = "strata-chain-worker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-checkpoint-types.workspace = true
strata-eectl.workspace = true
strata-identifiers.workspace = true
strata-ol-chain-types-new.workspace = true
strata-ol-state-support-types.workspace = true
strata-ol-state-types.workspace = true
strata-params.workspace = true
strata-primitives.workspace = true
strata-service.workspace = true
strata-status.workspace = true
strata-tasks.workspace = true

anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
