[package]
edition = "2021"
name = "strata-chaintsn"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-asm-types.workspace = true
strata-bridge-types.workspace = true
strata-checkpoint-types.workspace = true
strata-crypto.workspace = true
strata-ol-chain-types.workspace = true
strata-ol-chainstate-types.workspace = true
strata-params.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true

bitcoin.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
zkaleido.workspace = true

[dev-dependencies]
strata-test-utils.workspace = true
strata-test-utils-l2.workspace = true

[features]
default = ["fullstd"]
fullstd = ["dep:tracing"]
