[package]
edition = "2021"
name = "strata-chaintsn"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-manifest-types.workspace = true
strata-asm-types.workspace = true
strata-bridge-types.workspace = true
strata-checkpoint-types.workspace = true
strata-identifiers.workspace = true
strata-msg-fmt.workspace = true
strata-ol-chain-types.workspace = true
strata-ol-chainstate-types.workspace = true
strata-params.workspace = true
strata-predicate.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true

bitcoin.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
strata-test-utils.workspace = true
strata-test-utils-l2.workspace = true

[features]
default = ["fullstd"]
fullstd = ["dep:tracing"]
