[package]
name = "strata-checkpoint-types-new"
version = "0.3.0-alpha.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
# Strata dependencies
strata-crypto.workspace = true
strata-identifiers.workspace = true

# Serialization
borsh.workspace = true
serde = { workspace = true, features = ["derive"] }
ssz.workspace = true

# OL types (for parse_ol_logs)
strata-ol-chain-types-new.workspace = true

# Misc
thiserror.workspace = true
