[package]
edition = "2021"
name = "strata-checkpoint-types"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
ssz.workspace = true
ssz_derive.workspace = true
strata-bridge-types.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true

arbitrary.workspace = true
borsh.workspace = true
serde.workspace = true
zkaleido.workspace = true
