[package]
edition = "2021"
name = "strata-checkpoint-types"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-asm-proto-checkpoint-types.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true
strata-ol-chain-types.workspace = true

arbitrary.workspace = true
borsh.workspace = true
serde.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
thiserror.workspace = true
zkaleido.workspace = true
