[package]
name = "strata-codec-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
arbitrary = { workspace = true, optional = true }
borsh.workspace = true
strata-codec.workspace = true

ssz.workspace = true
ssz_derive.workspace = true

hex.workspace = true
serde.workspace = true

[dev-dependencies]
ciborium.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[features]
default = ["arbitrary"]
arbitrary = ["dep:arbitrary"]
