[package]
edition = "2021"
name = "strata-common"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
deadpool.workspace = true
jsonrpsee = { workspace = true, features = ["client"] }
serde.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true

[features]
async = ["dep:tokio"]
debug-utils = ["dep:tokio"]
