[package]
edition = "2021"
name = "strata-common"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
deadpool.workspace = true
futures.workspace = true
http.workspace = true
jsonrpsee = { workspace = true, features = ["client", "server"] }
serde.workspace = true
tokio = { workspace = true, optional = true }
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
async = ["dep:tokio"]
debug-utils = ["dep:tokio"]
