[package]
edition = "2021"
name = "strata-consensus-logic"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-params.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-asm-spec.workspace = true
strata-asm-spec-debug = { workspace = true, optional = true }
strata-asm-worker.workspace = true
strata-btc-types.workspace = true
strata-chain-worker.workspace = true
strata-checkpoint-types.workspace = true
strata-common = { workspace = true, default-features = true }
strata-csm-types.workspace = true
strata-csm-worker.workspace = true
strata-db-types.workspace = true
strata-identifiers.workspace = true
strata-l1-txfmt.workspace = true
strata-merkle.workspace = true
strata-node-context.workspace = true
strata-ol-chain-types.workspace = true
strata-ol-state-types.workspace = true
strata-predicate.workspace = true
strata-primitives.workspace = true
strata-service.workspace = true
strata-state.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-tasks.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
bitcoind-async-client.workspace = true
metrics.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-ol-chain-types = { workspace = true, features = ["test-utils"] }
strata-ol-state-support-types.workspace = true
strata-ol-stf = { workspace = true, features = ["test-utils"] }

rand = { version = "0.8.5", features = ["getrandom", "std_rng"] }

[features]
debug-asm = ["dep:strata-asm-spec-debug"]
debug-utils = ["strata-common/debug-utils"]
