[package]
edition = "2021"
name = "strata-crypto"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-identifiers.workspace = true

arbitrary.workspace = true
bincode.workspace = true
bitvec.workspace = true
borsh.workspace = true
musig2.workspace = true
rand = { workspace = true, optional = true }
serde.workspace = true
secp256k1 = { workspace = true, features = ["global-context"] }
thiserror.workspace = true
zkaleido.workspace = true
zkaleido-risc0-groth16-verifier.workspace = true
zkaleido-sp1-groth16-verifier.workspace = true

[target.'cfg(target_os = "zkvm")'.dependencies]
k256 = { version = "0.13.4", features = ["schnorr"] }

[dev-dependencies]
rand.workspace = true
strata-test-utils.workspace = true

[features]
default = []
test-utils = ["dep:rand"]
