[package]
edition = "2021"
name = "strata-csm-types"
version = "0.3.0-alpha.1"

[lints]
workspace = true

[dependencies]
strata-asm-proto-checkpoint-types.workspace = true
strata-btc-types.workspace = true
strata-checkpoint-types.workspace = true
strata-identifiers.workspace = true
strata-primitives.workspace = true

arbitrary.workspace = true
serde.workspace = true

[dev-dependencies]
bitcoin.workspace = true
strata-test-utils.workspace = true

[features]
default = ["std"]
std = []
