[package]
edition = "2021"
name = "strata-csm-types"
version = "0.3.0"

[lints]
workspace = true

[dependencies]
strata-asm-proto-checkpoint-types.workspace = true
strata-btc-types.workspace = true
strata-checkpoint-types.workspace = true
strata-identifiers.workspace = true
strata-l1-envelope-fmt.workspace = true
strata-l1-txfmt.workspace = true
strata-primitives.workspace = true

arbitrary.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
bitcoin.workspace = true
serde_json.workspace = true
strata-test-utils.workspace = true

[features]
default = ["std"]
std = []
