[package]
name = "strata-csm-worker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-proto-checkpoint-txs.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-asm-worker.workspace = true
strata-checkpoint-types.workspace = true
strata-common.workspace = true
strata-csm-types.workspace = true
strata-identifiers.workspace = true
strata-l1-txfmt.workspace = true
strata-params.workspace = true
strata-primitives.workspace = true
strata-service.workspace = true
strata-storage.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-test-utils.workspace = true
strata-db-store-sled = { workspace = true, features = ["test_utils"] }
strata-asm-proto-checkpoint-types = { workspace = true, features = [
  "test-utils",
] }
strata-asm-proto-txs-test-utils.workspace = true
strata-codec.workspace = true
strata-codec-utils.workspace = true
strata-status.workspace = true
strata-test-utils-l2.workspace = true
threadpool.workspace = true

[features]
debug-utils = ["strata-common/debug-utils"]
