[package]
name = "strata-csm-worker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-proto-checkpoint.workspace = true
strata-asm-proto-checkpoint-txs.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-asm-worker.workspace = true
strata-checkpoint-verification.workspace = true
strata-common.workspace = true
strata-csm-types.workspace = true
strata-identifiers.workspace = true
strata-l1-txfmt.workspace = true
strata-primitives.workspace = true
strata-service.workspace = true
strata-state.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-checkpoint-types.workspace = true
strata-test-utils.workspace = true
strata-db-store-sled = { workspace = true, features = ["test_utils"] }
strata-asm-proto-checkpoint-types = { workspace = true, features = [
  "test-utils",
] }
strata-asm-params.workspace = true
strata-asm-proto-txs-test-utils.workspace = true
strata-btc-verification.workspace = true
strata-codec.workspace = true
strata-codec-utils.workspace = true
strata-l1-envelope-fmt.workspace = true
strata-status.workspace = true
strata-storage.workspace = true
strata-test-utils-checkpoint.workspace = true
strata-test-utils-l2.workspace = true
rand.workspace = true
threadpool.workspace = true

[features]
debug-utils = ["strata-common/debug-utils"]
