[package]
name = "strata-db-store-sled"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-asm-common.workspace = true
strata-asm-types.workspace = true
strata-checkpoint-types.workspace = true
strata-db.workspace = true
strata-ol-chain-types.workspace = true
strata-ol-chainstate-types.workspace = true
strata-primitives.workspace = true
strata-state.workspace = true
typed-sled.workspace = true
zkaleido.workspace = true

anyhow.workspace = true
bincode.workspace = true
borsh.workspace = true
sled.workspace = true

[dev-dependencies]
strata-db-tests.workspace = true
sled = "0.34.7"

[lints]
workspace = true

[features]
default = ["test_utils"]
test_utils = []
