[package]
name = "strata-db-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
strata-db = { path = "../db" }
strata-l1tx = { path = "../l1tx" }
strata-primitives = { path = "../primitives" }
strata-state = { path = "../state" }
strata-test-utils = { path = "../test-utils" }
zkaleido = { workspace = true }

[dev-dependencies]
# This crate is intended for testing, so no dev-dependencies needed
