[package]
name = "strata-ee-acct-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["builders"]
builders = ["dep:thiserror"]

[dependencies]
strata-acct-types.workspace = true
strata-codec.workspace = true
strata-ee-acct-types.workspace = true
strata-ee-chain-types.workspace = true
strata-primitives.workspace = true
strata-snark-acct-types.workspace = true

digest.workspace = true
sha2.workspace = true
thiserror = { workspace = true, optional = true }

[dev-dependencies]
strata-msg-fmt.workspace = true
strata-simple-ee.workspace = true

[lints]
workspace = true
